MOBILE-4821 collapsible: Fix overlapping toolbar on split views

--- a/src/theme/components/collapsible-header.scss
+++ b/src/theme/components/collapsible-header.scss
@@ -36,6 +36,7 @@ body:not(.core-iframe-fullscreen):not(.core-reading-mode-enabled) .collapsible-h
         --core-header-buttons-color: var(--text-color);
         --core-header-buttons-background: transparent;
         --core-header-toolbar-background: transparent;
+        width: var(--collapsible-header-content-width, '100%');
 
         h1 {
             opacity: 0;
